End-to-end in place; No DB bootstrap